force-app/main/default/objects/Claim__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case#</label>
    <length>30</length>
    <type>Text</type>
</CustomField>