force-app/main/default/objects/Claim__c/fields/CGL_Carrier__c.field-meta.xml
<CustomField>
    <fullName>CGL_Carrier__c</fullName>
    <label>CGL Carrier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>