force-app/main/default/objects/Claim__c/fields/CGL_Claim_Filed__c.field-meta.xml
<CustomField>
    <fullName>CGL_Claim_Filed__c</fullName>
    <label>CGL Claim Filed</label>
    <type>Date</type>
</CustomField>