force-app/main/default/objects/Claim__c/fields/CGL_Written_Denial__c.field-meta.xml
<CustomField>
    <fullName>CGL_Written_Denial__c</fullName>
    <label>CGL Written Denial</label>
    <type>Date</type>
</CustomField>