force-app/main/default/objects/Claim__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim#</label>
    <length>14</length>
    <type>Text</type>
</CustomField>