force-app/main/default/objects/Claim__c/fields/Closed_Claim_Note__c.field-meta.xml
<CustomField>
    <fullName>Closed_Claim_Note__c</fullName>
    <label>Closed Claim Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>