force-app/main/default/objects/Claim__c/fields/D_O_Carrier__c.field-meta.xml
<CustomField>
    <fullName>D_O_Carrier__c</fullName>
    <label>D&amp;O Carrier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>