force-app/main/default/objects/Claim__c/fields/D_O_Claim_Filed__c.field-meta.xml
<CustomField>
    <fullName>D_O_Claim_Filed__c</fullName>
    <label>D&amp;O Claim Filed</label>
    <type>Date</type>
</CustomField>