force-app/main/default/objects/Claim__c/fields/D_O_Written_Denial__c.field-meta.xml
<CustomField>
    <fullName>D_O_Written_Denial__c</fullName>
    <label>D&amp;O Written Denial</label>
    <type>Date</type>
</CustomField>