force-app/main/default/objects/Claim__c/fields/Day_Insured_received_notice_of_damages__c.field-meta.xml
<CustomField>
    <fullName>Day_Insured_received_notice_of_damages__c</fullName>
    <label>Insured received notice of Damages</label>
    <type>Date</type>
</CustomField>