force-app/main/default/objects/Claim__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <formula>Policy__r.Insured__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured</label>
    <type>Text</type>
</CustomField>