force-app/main/default/objects/Claim__c/fields/Insured_received_notice_of_the_Claim__c.field-meta.xml
<CustomField>
    <fullName>Insured_received_notice_of_the_Claim__c</fullName>
    <label>Insured received notice of the Claim</label>
    <type>Date</type>
</CustomField>