force-app/main/default/objects/Claim__c/fields/LR_Attorney__c.field-meta.xml
<CustomField>
    <fullName>LR_Attorney__c</fullName>
    <label>LR Attorney</label>
    <length>25</length>
    <type>Text</type>
</CustomField>