force-app/main/default/objects/Claim__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>DENIED</fullName>
            </value>
            <value>
                <fullName>NOTICE ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>