force-app/main/default/objects/Claim__c/fields/Who_Filled_out_Claim_Form__c.field-meta.xml
<CustomField>
    <fullName>Who_Filled_out_Claim_Form__c</fullName>
    <label>Who Filled out Claim Form</label>
    <length>40</length>
    <type>Text</type>
</CustomField>