force-app/main/default/objects/Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Claim__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Insured__c</columns>
    <columns>Policy__c</columns>
    <columns>Case__c</columns>
    <columns>County__c</columns>
    <columns>Status_Flag__c</columns>
    <columns>LR_Attorney__c</columns>
    <columns>Claim_Summary__c</columns>
    <columns>Closed_Claim_Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>